CSS added to correct the right margin overflow on webpage body.

--- a/sass/content.scss
+++ b/sass/content.scss
@@ -42,7 +42,14 @@
 		margin-top: 0px;
 	}
 }
-
+/*** Correcting Webpage Overflow ***/
+html, body {
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 /*******************************************
 	Front Page Global Collection Search
 ********************************************/
